--- a/src/market.html
+++ b/src/market.html
@@ -184,6 +184,22 @@
                         <div class="swiper-slide"><img class="img-fluid" src="./img/uniform-4.png" width="446"
                                                        height="446" alt="mpr форма"></div>
                     </div>
+                    <div class="swiper-uniform-next">
+                        <img src="./img/uniform-arrow.svg" width="26" height="58" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-container-uniform-thumb">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img class="img-fluid" src="./img/uniform-1.png" width="438"
+                                                       height="438" alt="mpr футболка"></div>
+                        <div class="swiper-slide"><img class="img-fluid" src="./img/uniform-2.png" width="516"
+                                                       height="406" alt="mpr форма"></div>
+                        <div class="swiper-slide"><img class="img-fluid" src="./img/uniform-3.png" width="427"
+                                                       height="320" alt="mpr форма"></div>
+                        <div class="swiper-slide"><img class="img-fluid" src="./img/uniform-4.png" width="446"
+                                                       height="446" alt="mpr форма"></div>
+                    </div>
                 </div>
             </div>
         </div>
