--- a/src/market.html
+++ b/src/market.html
@@ -183,6 +183,8 @@
                                                        height="320" alt="mpr форма"></div>
                         <div class="swiper-slide"><img class="img-fluid" src="./img/uniform-4.png" width="446"
                                                        height="446" alt="mpr форма"></div>
+                        <div class="swiper-slide"><img class="img-fluid" src="./img/uniform-4.png" width="446"
+                                                       height="446" alt="mpr форма"></div>
                     </div>
                     <div class="swiper-uniform-next">
                         <img src="./img/uniform-arrow.svg" width="26" height="58" alt="">
@@ -197,6 +199,8 @@
                                                        height="406" alt="mpr форма"></div>
                         <div class="swiper-slide"><img class="img-fluid" src="./img/uniform-3.png" width="427"
                                                        height="320" alt="mpr форма"></div>
+                        <div class="swiper-slide"><img class="img-fluid" src="./img/uniform-4.png" width="446"
+                                                       height="446" alt="mpr форма"></div>
                         <div class="swiper-slide"><img class="img-fluid" src="./img/uniform-4.png" width="446"
                                                        height="446" alt="mpr форма"></div>
                     </div>
