--- a/src/learning.html
+++ b/src/learning.html
@@ -27,50 +27,51 @@
     <div id="learning-main" class="learning-main">
         <div class="learning-main__img">
             <img class="img-fluid" src="./img/learning-main2.png" width="1439" height="810" alt="">
-            <div class="learning-main__img-logo"><img class="img-fluid" src="./img/learning-logo.png" width="440" height="46" alt=""></div>
+            <div class="learning-main__img-logo"><img class="img-fluid" src="./img/learning-logo.png" width="440"
+                                                      height="46" alt=""></div>
         </div>
-            <div class="container">
-                <div class="learning-main__header">
-                    <div class="learning-main__title">Учебный центр</div>
-                </div>
-                <div class="learning-main__body">
-                    <div class="learning-main__item">
-                        <div class="learning-main__icon"></div>
-                        <div class="learning-main__name">создан для интеграции опыта действующих технологий и
-                            инструментов
-                            малого бизнеса
-                        </div>
-                    </div>
-                    <div class="learning-main__item">
-                        <div class="learning-main__icon"></div>
-                        <div class="learning-main__name">предоставляет возможность обязательной отработки полученных
-                            навыков
-                            на магазине-школе
-                        </div>
-                    </div>
-                    <div class="learning-main__item">
-                        <div class="learning-main__icon"></div>
-                        <div class="learning-main__name">реализует подготовку к отрытию и сопровождение действующих
-                            магазинов силами региональных тренеров Учебного Центра
-                        </div>
-                    </div>
-                    <div class="learning-main__item">
-                        <div class="learning-main__icon"></div>
-                        <div class="learning-main__name">консультирует после обучния в течение 2 месяцев</div>
-                    </div>
-                    <div class="learning-main__item">
-                        <div class="learning-main__icon"></div>
-                        <div class="learning-main__name">поможет качественно подготовиться к эффективной работе
-                            собственного
-                            МПР
-                        </div>
-                    </div>
-                    <div class="learning-main__item align-center">
-                        <img class="img-fluid" src="./img/learning-logo.png" width="440" height="46" alt="">
-                    </div>
-                    <button class="btn btn-primary">записаться на курс</button>
-                </div>
+        <div class="container">
+            <div class="learning-main__header">
+                <div class="learning-main__title">Учебный центр</div>
             </div>
+            <div class="learning-main__body">
+                <div class="learning-main__item">
+                    <div class="learning-main__icon"></div>
+                    <div class="learning-main__name">создан для интеграции опыта действующих технологий и
+                        инструментов
+                        малого бизнеса
+                    </div>
+                </div>
+                <div class="learning-main__item">
+                    <div class="learning-main__icon"></div>
+                    <div class="learning-main__name">предоставляет возможность обязательной отработки полученных
+                        навыков
+                        на магазине-школе
+                    </div>
+                </div>
+                <div class="learning-main__item">
+                    <div class="learning-main__icon"></div>
+                    <div class="learning-main__name">реализует подготовку к отрытию и сопровождение действующих
+                        магазинов силами региональных тренеров Учебного Центра
+                    </div>
+                </div>
+                <div class="learning-main__item">
+                    <div class="learning-main__icon"></div>
+                    <div class="learning-main__name">консультирует после обучния в течение 2 месяцев</div>
+                </div>
+                <div class="learning-main__item">
+                    <div class="learning-main__icon"></div>
+                    <div class="learning-main__name">поможет качественно подготовиться к эффективной работе
+                        собственного
+                        МПР
+                    </div>
+                </div>
+                <div class="learning-main__item align-center">
+                    <img class="img-fluid" src="./img/learning-logo.png" width="440" height="46" alt="">
+                </div>
+                <button class="btn btn-primary">записаться на курс</button>
+            </div>
+        </div>
 
     </div>
 
@@ -106,7 +107,7 @@
 
                     <li><b>15-26 марта 2021 года </b>- Курс для управляющих магазином (группа 20)</li>
                 </ul>
-                <button type="button" class="btn btn-primary" data-remodal-target="course" >Записаться на курс</button>
+                <button type="button" class="btn btn-primary" data-remodal-target="course">Записаться на курс</button>
             </div>
 
             <div class="learning-page__body">
@@ -131,7 +132,8 @@
                 <div>
                     <p><b>Остались вопросы?</b><br>
                         Заполните форму и мы свяжемся с вами в ближайшее время</p>
-                    <button type="button" class="btn btn-primary d-mobile-none" data-remodal-target="question">Задать вопрос
+                    <button type="button" class="btn btn-primary d-mobile-none" data-remodal-target="question">Задать
+                        вопрос
                     </button>
                 </div>
                 <div>
