--- a/src/articles-inner.html
+++ b/src/articles-inner.html
@@ -27,9 +27,12 @@
 
     <div class="articles-inner">
         <div class="container">
-            <div class="articles-inner__title">Выкладка товара для увеличения продаж:<br> 12 правил мерчандайзинга</div>
-            <div class="articles-inner__img">
+            <div class="articles-inner__h1">Статьи</div>
+            <div class="articles-inner__header">
+                <div class="articles-inner__title">Выкладка товара для увеличения продаж:<br> 12 правил мерчандайзинга</div>
                 <div class="articles-inner__date">22.02.2022</div>
+            </div>
+            <div class="articles-inner__img">
                 <img class="img-fluid" src="./img/article-inner.png" width="1115" height="287" alt="">
             </div>
             <div class="articles-inner__body">
